--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.5",
+    "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
