--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.17.0",
     "antd-img-crop": "^4.21.0",
@@ -17,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "chroma-js": "^2.4.2",
+    "clsx": "^2.1.1",
     "firebase": "^10.7.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
@@ -35,6 +37,7 @@
     "react-router-dom": "^6.21.3",
     "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.4.41",
     "sweetalert2": "^11.10.5",
     "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^3.5.2"
