--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
     "antd-img-crop": "^4.21.0",
     "antd-style": "^3.6.1",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.320.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
