--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@headlessui/react": "^2.0.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@tinymce/tinymce-react": "^5.0.1",
