--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.0.1",
     "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
@@ -43,6 +49,7 @@
     "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.10.5",
     "tailwind-scrollbar": "^3.1.0",
     "web-vitals": "^3.5.2"
