--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
+    "react-type-animation": "^3.2.0",
     "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
