--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.0.1",
+    "@syncfusion/ej2-react-schedule": "^25.2.7",
     "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
     "antd-img-crop": "^4.21.0",
