--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@headlessui/react": "^2.0.3",
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@syncfusion/ej2-react-schedule": "^25.2.7",
     "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
@@ -28,9 +28,11 @@
     "axios": "^1.6.5",
     "chroma-js": "^2.4.2",
     "clsx": "^2.1.1",
-    "firebase": "^10.7.1",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.12.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.320.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
@@ -43,7 +45,7 @@
     "react-image-gallery": "^1.3.0",
     "react-otp-input": "^3.1.1",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "react-select": "^5.8.0",
@@ -67,6 +69,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.3.1"
   }
 }
