--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.5",
     "@syncfusion/ej2-react-schedule": "^25.2.7",
+    "@tanstack/react-query": "^5.51.9",
     "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
     "antd-img-crop": "^4.21.0",
@@ -60,6 +61,7 @@
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.51.10",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
