--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.5",
-    "@syncfusion/ej2-react-schedule": "^25.2.7",
+    "@syncfusion/ej2-react-base": "^26.2.5",
+    "@syncfusion/ej2-react-schedule": "^26.2.5",
     "@tanstack/react-query": "^5.51.9",
     "@tinymce/tinymce-react": "^5.0.1",
-    "antd": "^5.17.0",
+    "antd": "^5.19.3",
     "antd-img-crop": "^4.21.0",
     "antd-style": "^3.6.1",
     "aos": "^2.3.4",
@@ -38,6 +39,7 @@
     "lucide-react": "^0.320.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "prop-types": "^15.8.1",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
