--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
-    "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
@@ -20,9 +18,7 @@
     "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.5",
-    "@syncfusion/ej2-react-schedule": "^25.2.7",
     "@tanstack/react-query": "^5.51.9",
-    "@tinymce/tinymce-react": "^5.0.1",
     "antd": "^5.17.0",
     "antd-img-crop": "^4.21.0",
     "antd-style": "^3.6.1",
@@ -36,9 +32,6 @@
     "framer-motion": "^11.0.3",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.320.0",
-    "moment": "^2.30.1",
-    "moment-timezone": "^0.5.45",
-    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -46,7 +39,6 @@
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-otp-input": "^3.1.1",
-    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
@@ -71,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.3.1"
   }
