--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-select": "^5.8.0",
     "react-type-animation": "^3.2.0",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
     "styled-components": "^6.1.11",
